--- a/templates/home.html
+++ b/templates/home.html
@@ -8,16 +8,85 @@
 
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
 
-   <link rel="stylesheet" href="../static/css/bootstrap.min.css">
+  <link rel="stylesheet" href="../static/css/bootstrap.min.css">
 
   <script type="text/javascript" src="../static/js/jquery.min.js"></script>
 
   <script type="text/javascript" src="../static/js/bootstrap.min.js"></script>
 
+  <style>
+    .fade-eff-1 {
+        opacity: 0;
+        animation: fadeImg 1s ease-in-out forwards;
+        animation-delay: 1s;
+    }
+    .fade-eff-05 {
+        opacity: 0;
+        animation: fadeImg 0.5s ease-in-out forwards;
+        animation-delay: 0.3s;
+    }
+    @keyframes fadeImg {
+      0% {
+        opacity: 0;
+      }
+      100% {
+        opacity: 1;
+      }
+    }
+
+    .slide {
+      position: absolute;
+      top: -2000px;
+      animation: slide 1.5s forwards;
+    }
+
+    @keyframes slide {
+        100% { top: 0; }
+    }
+
+    .masthead {
+      position: relative;
+      width: 100%;
+      height: auto;
+      min-height: 35rem;
+      padding: 15rem 0;
+      background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.7) 75%, #000000 100%), url("../static/img/tattoMain.jpg");
+      background-position: center;
+      background-repeat: no-repeat;
+      background-attachment: scroll;
+      background-size: cover;
+    }
+    .masthead h1 {
+      font-size: 3rem;
+      line-height: 3rem;
+      letter-spacing: 0.8rem;
+      background: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.2));
+      -webkit-text-fill-color: transparent;
+      -webkit-background-clip: text;
+              background-clip: text;
+    }
+    @media (min-width: 992px) {
+      .masthead {
+        height: 100vh;
+        padding: 0;
+      }
+      .masthead h1 {
+        font-size: 4rem;
+        line-height: 4rem;
+        letter-spacing: 0.8rem;
+      }
+      .masthead h2 {
+        max-width: 30rem;
+        font-size: 1.25rem;
+      }
+    }
+
+  </style>
+
 </head>
 <body>
-  <header style="margin-bottom: 7%;">
-    <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top p-3">
+  <header style="margin-bottom: 6%;">
+    <nav class="navbar fade-eff-05 navbar-expand-md bg-dark navbar-dark fixed-top p-3">
       <div class="container-fluid">
           <a class="navbar-brand" href="#">Veronique</a>
 
@@ -25,10 +94,9 @@
             <span class="navbar-toggler-icon"></span>
           </button>
 
-          <!-- Left side Links -->
-          <div class="collapse navbar-collapse" id="NavbarLinksLeft">
-
-            <ul class="navbar-nav mr-auto">
+          <!-- Right side Links -->
+          <div class="collapse navbar-collapse justify-content-end" id="NavbarLinksRight">
+            <ul class="navbar-nav mr-5">
               <li class="nav-item h5 my-2 mx-2">
                 <a class="nav-link" href="#">Strona Główna</a>
               </li>
@@ -37,22 +105,19 @@
                 <a class="nav-link" href="#">O nas</a>
               </li>
 
-              <li class="nav-item h5 my-2 mx-2">
+              <li class="nav-item h5 my-2 mx-2" style="width: 150px;">
                 <a class="nav-link" href="#">Kontakt</a>
               </li>
             </ul>
-          </div>
 
-          <!-- Right side Links -->
-          <div class="collapse navbar-collapse justify-content-end" id="NavbarLinksRight">
-            <ul class="navbar-nav ml-auto">
-              <li class="nav-item h4 mx-1">
+            <ul class="navbar-nav ml-5">
+              <li class="nav-item h4 mt-2 mx-1">
                 <a class="nav-link waves-effect waves-light">
                   <i class="fab fa-instagram"></i>
                 </a>
               </li>
 
-              <li class="nav-item h4 mx-1">
+              <li class="nav-item h4 mt-2 mx-1">
                 <a class="nav-link waves-effect waves-light">
                   <i class="fab fa-facebook"></i>
                 </a>
@@ -62,7 +127,14 @@
       </div>
     </nav>
   </header>
-    <h2 >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium fuga hic magnam molestias quae sint, voluptatibus! Dicta dolorem eveniet incidunt nisi quaerat soluta ut? Architecto delectus fuga id iusto ratione.</h2>
+    <header class="masthead slide">
+      <div class="container d-flex h-100 align-items-center">
+        <div class="mx-auto text-center">
+          <h1 class="mx-auto my-0 text-uppercase">Tattoo Veronique</h1>
+        </div>
+      </div>
+    </header>
+    <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium fuga hic magnam molestias quae sint, voluptatibus! Dicta dolorem eveniet incidunt nisi quaerat soluta ut? Architecto delectus fuga id iusto ratione.</h2>
         <h2 >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium fuga hic magnam molestias quae sint, voluptatibus! Dicta dolorem eveniet incidunt nisi quaerat soluta ut? Architecto delectus fuga id iusto ratione.</h2>
 
       <h2 >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium fuga hic magnam molestias quae sint, voluptatibus! Dicta dolorem eveniet incidunt nisi quaerat soluta ut? Architecto delectus fuga id iusto ratione.</h2>
