cutting sm screen fixed

--- a/templates/home.html
+++ b/templates/home.html
@@ -75,16 +75,17 @@
         line-height: 4rem;
         letter-spacing: 0.8rem;
       }
-      .masthead h2 {
-        max-width: 30rem;
-        font-size: 1.25rem;
-      }
+    }
+
+    .container {
+      width: 100%;
+      max-width: 1200px;
     }
 
   </style>
 
 </head>
-<body>
+<body style="width:100%">
   <header style="margin-bottom: 6%;">
     <nav class="navbar fade-eff-05 navbar-expand-md bg-dark navbar-dark fixed-top p-3">
       <div class="container-fluid">
