fix cutted screen again (hopfully last time)

--- a/templates/home.html
+++ b/templates/home.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta name="viewport" content="width=500px, maximum-scale=1.0" />
   <title>MyWebPage</title>
 
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
@@ -75,11 +75,6 @@
         line-height: 4rem;
         letter-spacing: 0.8rem;
       }
-    }
-
-    .container {
-      width: 100%;
-      max-width: 1200px;
     }
 
   </style>
