--- a/templates/home.html
+++ b/templates/home.html
@@ -76,6 +76,12 @@
         letter-spacing: 0.8rem;
       }
     }
+    @media (min-width: 400px) {
+      .masthead {
+        height: 120vh;
+        padding: 0;
+      }
+    }
 
   </style>
 
