--- a/templates/home.html
+++ b/templates/home.html
@@ -83,12 +83,16 @@
       }
     }
 
+    body {
+      background: rgb(224,224,224)
+    }
+
   </style>
 
 </head>
 <body style="width:100%">
   <header style="margin-bottom: 6%;">
-    <nav class="navbar fade-eff-05 navbar-expand-md bg-dark navbar-dark fixed-top p-3">
+    <nav class="navbar fade-eff-05 navbar-expand-md bg-dark navbar-dark fixed-top p-md-3 p-xs-5">
       <div class="container-fluid">
           <a class="navbar-brand" href="#">Veronique</a>
 
@@ -136,6 +140,29 @@
         </div>
       </div>
     </header>
+
+    <div class="container-fluid">
+      <div class="row justify-content-center my-5 mb-lg-0">
+        <div class="col-lg-5">
+          <img class="img-fluid" src="../static/img/Veronika.jpg" alt="" />
+        </div>
+        <div class="col-lg-6">
+          <div class="d-flex flex-row h-100">
+            <div class="project-text w-100 my-auto">
+              <div class="text-center text-lg-left">
+                <h1 style="color: #424242">Veronika Karpenko</h1>
+                <p style="color: ##616161">An example of where you can put an image of a project, or anything else, along with a description.</p>
+                <hr class="d-none d-lg-block mb-3 ml-0" />
+              </div>
+              <div class="d-flex flex-row-reverse h-100">
+                <button type="button" class="btn btn-dark">Więcej</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium fuga hic magnam molestias quae sint, voluptatibus! Dicta dolorem eveniet incidunt nisi quaerat soluta ut? Architecto delectus fuga id iusto ratione.</h2>
         <h2 >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium fuga hic magnam molestias quae sint, voluptatibus! Dicta dolorem eveniet incidunt nisi quaerat soluta ut? Architecto delectus fuga id iusto ratione.</h2>
 
