--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=500px, maximum-scale=1.0" />
-  <title>MyWebPage</title>
+  <title>Home</title>
 
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
 
@@ -14,16 +14,37 @@
 
   <script type="text/javascript" src="../static/js/bootstrap.min.js"></script>
 
+  <script>
+    $(window).on("load",function() {
+
+      $(window).scroll(function() {
+        var windowTop = $(this).scrollTop();
+        var windowBottom = $(this).scrollTop() + $(this).innerHeight(); //current screen bottom border
+
+        $(".fade-500").each(function() {
+          var objectTop= $(this).offset().top;
+          var margin = 100;
+          if (objectTop + margin < windowBottom) {
+            if ($(this).css("opacity")==0) {
+              $(this).fadeTo(500,1);
+            }
+          }
+          else {
+            if ($(this).css("opacity")==1) {
+              $(this).fadeTo(500,0);
+            }
+          }
+        });
+      }).scroll();
+
+    });
+  </script>
+
   <style>
-    .fade-eff-1 {
+    .fade-once-1 {
         opacity: 0;
         animation: fadeImg 1s ease-in-out forwards;
-        animation-delay: 1s;
-    }
-    .fade-eff-05 {
-        opacity: 0;
-        animation: fadeImg 0.5s ease-in-out forwards;
-        animation-delay: 0.3s;
+        animation-delay: 0.5s;
     }
     @keyframes fadeImg {
       0% {
@@ -37,7 +58,7 @@
     .slide {
       position: absolute;
       top: -2000px;
-      animation: slide 1.5s forwards;
+      animation: slide 0.7s forwards;
     }
 
     @keyframes slide {
@@ -65,6 +86,7 @@
       -webkit-background-clip: text;
               background-clip: text;
     }
+
     @media (min-width: 992px) {
       .masthead {
         height: 100vh;
@@ -84,15 +106,152 @@
     }
 
     body {
-      background: rgb(224,224,224)
+      background: rgb(200, 200, 200)
+    }
+
+    .navbar-custom {
+      background-color: rgba(0,0,0,0.5);
+    }
+
+    .fade-500 {
+      opacity: 1;
+    }
+
+    .fade-700 {
+      opacity: 1;
+    }
+
+    .btn-main {
+      width: 45vh;
+      height: 10vh;
+      font-size : 20px;
+      border-radius: 8px;
+      border-color: #9E9E9E;
+      transition: transform .5s;
+      background: rgba(0,0,0,0);
+      color: #828282;
+    }
+
+    .btn-main:hover {
+      background: rgba(33,33,33,0.7);
+      transform: scale(1.2);
+      color: #BDBDBD;
+    }
+
+    .btn-mini {
+      width: 15vh;
+      height: 7vh;
+      font-size : 18px;
+      border-radius: 8px;
+      border-color: #424242;
+      transition: transform .5s;
+      background: rgba(0,0,0,0);
+      color: #616161;
+    }
+
+    .btn-mini:hover {
+      background: rgba(33,33,33,0.3);
+      transform: scale(1.2);
+      color: #BDBDBD;
+    }
+
+    .btn-gallery {
+      width: 100%;
+      height: 100%;
+      font-size : 100px;
+      border-radius: 8px;
+      border-color: #9E9E9E;
+      background: rgba(33,33,33,0.2);
+      color: #828282;
+    }
+
+    .about-gradient {
+      background: linear-gradient(to top, rgba(200, 200, 200, 0.3) 0%, rgba(0, 0, 0, 0.7) 75%, #000000 100%);
+    }
+
+    @media (min-width: 767px) {
+      .zoom {
+        transition: transform .5s; /* Animation */
+      }
+
+      .zoom:hover {
+        transform: scale(1.3);
+      }
+    }
+
+    .card{
+      width: 100%;
+      height: 450px;
+      background: #9E9E9E;
+      border-radius: 4px;
+      box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    }
+    .card:before,
+    .card:after {
+      content:"";
+      position: absolute;
+      width: 100%;
+      height: 450px;
+      border-radius: 4px;
+      background: #9E9E9E;
+      transition: 0.5s;
+      z-index:-1;
+    }
+    .card:hover:before{
+      transform: rotate(10deg);
+      box-shadow: 0 2px 20px rgba(0,0,0,.2);
+    }
+    .card:hover:after{
+      transform: rotate(5deg);
+      box-shadow: 0 2px 20px rgba(0,0,0,.2);
+    }
+    .card .imgBx{
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      bottom: 10px;
+      right: 10px;
+      transition: 0.5s;
+      z-index: 1;
+    }
+
+    .card:hover .imgBx{
+      bottom: 110px;
+    }
+
+    .card .imgBx img{
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+
+    .card .details{
+      position: absolute;
+      left: 10px;
+      right: 10px;
+      bottom: 10px;
+      height: 90px;
+      text-align: center;
+    }
+
+    .card .details h2{
+     margin: 0;
+     padding: 0;
+     font-weight: 600;
+     font-size: 20px;
+     color: #777;
+     text-transform: uppercase;
     }
 
   </style>
 
 </head>
-<body style="width:100%">
-  <header style="margin-bottom: 6%;">
-    <nav class="navbar fade-eff-05 navbar-expand-md bg-dark navbar-dark fixed-top p-md-3 p-xs-5">
+<body>
+  <header>
+    <nav class="navbar navbar-custom fixed-top navbar-expand-md navbar-dark p-md-1 p-xs-5">
       <div class="container-fluid">
           <a class="navbar-brand" href="#">Veronique</a>
 
@@ -100,8 +259,8 @@
             <span class="navbar-toggler-icon"></span>
           </button>
 
-          <!-- Right side Links -->
           <div class="collapse navbar-collapse justify-content-end" id="NavbarLinksRight">
+
             <ul class="navbar-nav mr-5">
               <li class="nav-item h5 my-2 mx-2">
                 <a class="nav-link" href="#">Strona Główna</a>
@@ -129,84 +288,224 @@
                 </a>
               </li>
             </ul>
+
           </div>
       </div>
     </nav>
-  </header>
-    <header class="masthead slide">
-      <div class="container d-flex h-100 align-items-center">
-        <div class="mx-auto text-center">
-          <h1 class="mx-auto my-0 text-uppercase">Tattoo Veronique</h1>
-        </div>
-      </div>
-    </header>
 
-    <div class="container-fluid">
-      <div class="row justify-content-center my-5 mb-lg-0">
-        <div class="col-lg-5">
+  </header>
+
+  <header class="masthead fade-once-1">
+    <div class="container d-flex h-100 align-items-center">
+
+      <div class="mx-auto text-center">
+
+        <h1 class="mx-auto my-0 text-uppercase">Tattoo Veronique</h1>
+
+        <div style="text-align: center; margin-top:15vh;">
+          <button type="button" class="btn-main">Złożyć zamówienie</button>
+        </div>
+
+      </div>
+
+    </div>
+  </header>
+
+  <section class="container-fluid fade-once-1 about-gradient">
+
+      <div class="row justify-content-center mx-5 mb-lg-0">
+
+        <div class="col-lg-5 my-2 fade-500">
           <img class="img-fluid" src="../static/img/Veronika.jpg" alt="" />
         </div>
-        <div class="col-lg-6">
+
+        <div class="col-lg-6 fade-500">
           <div class="d-flex flex-row h-100">
             <div class="project-text w-100 my-auto">
+              <!-- About: IMG -->
               <div class="text-center text-lg-left">
-                <h1 style="color: #424242">Veronika Karpenko</h1>
-                <p style="color: ##616161">An example of where you can put an image of a project, or anything else, along with a description.</p>
+                <h1 style="color: #121212">Veronika Karpenko</h1>
+                <p style="color: #212121">An example of where you can put an image of a project, or anything else, along with a description.</p>
                 <hr class="d-none d-lg-block mb-3 ml-0" />
               </div>
+              <!-- About: More Button -->
               <div class="d-flex flex-row-reverse h-100">
-                <button type="button" class="btn btn-dark">Więcej</button>
+                <button type="button" class="btn btn-dark" style="width:22vh;height:9vh">Więcej</button>
               </div>
+
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+  </section>
+
+  <section class="container" style="margin-top: 20vh;">
+    <div class="row fade-500 justify-content-center text-center mb-5" >
+      <h1>Usługi</h1>
+      <hr style="width:50%">
+    </div>
+
+    <div class="row">
+      <div class="col-lg-3 mb-5 my-lg-2 mr-4">
+        <div class="card">
+
+          <div class="imgBx">
+            <img src="../static/img/galery/tattooThin.jpg" alt="images">
+          </div>
+
+          <div class="details">
+            <h2 style="margin-bottom:2vh;">Cienkie tatuaże</h2>
+            <div class="d-flex flex-row-reverse h-100">
+              <button type="button" class="btn-mini">Zamówić</button>
+            </div>
+          </div>
+
+        </div>
+      </div>
+
+      <div class="col-lg-3 my-5 my-lg-2 mr-4">
+        <div class="card">
+          <div class="imgBx">
+            <img src="../static/img/galery/tattooEyebrows.jpg" alt="images">
+          </div>
+          <div class="details">
+            <h2 style="margin-bottom:2vh;">Micro pigmentacija</h2>
+            <div class="d-flex flex-row-reverse h-100">
+              <button type="button" class="btn-mini">Zamówić</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-3 my-5 my-lg-2 mr-4">
+        <div class="card">
+          <div class="imgBx">
+            <img src="../static/img/galery/tattooDot.jpg" alt="images">
+          </div>
+          <div class="details">
+            <h2 style="margin-bottom:2vh;">Dotwork</h2>
+            <div class="d-flex flex-row-reverse h-100">
+              <button type="button" class="btn-mini">Zamówić</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-3 mt-5 my-lg-2 mr-4">
+        <div class="card">
+          <div class="imgBx">
+            <img src="../static/img/galery/eskiz.jpg" alt="images">
+          </div>
+          <div class="details">
+            <h2 style="margin-bottom:2vh;">Indywidualne szkice</h2>
+            <div class="d-flex flex-row-reverse h-100">
+              <button type="button" class="btn-mini">Zamówić</button>
             </div>
           </div>
         </div>
       </div>
     </div>
 
-    <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium fuga hic magnam molestias quae sint, voluptatibus! Dicta dolorem eveniet incidunt nisi quaerat soluta ut? Architecto delectus fuga id iusto ratione.</h2>
-        <h2 >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium fuga hic magnam molestias quae sint, voluptatibus! Dicta dolorem eveniet incidunt nisi quaerat soluta ut? Architecto delectus fuga id iusto ratione.</h2>
+  </section>
 
-      <h2 >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium fuga hic magnam molestias quae sint, voluptatibus! Dicta dolorem eveniet incidunt nisi quaerat soluta ut? Architecto delectus fuga id iusto ratione.</h2>
-    <h2 >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium fuga hic magnam molestias quae sint, voluptatibus! Dicta dolorem eveniet incidunt nisi quaerat soluta ut? Architecto delectus fuga id iusto ratione.</h2>
-    <h2 >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium fuga hic magnam molestias quae sint, voluptatibus! Dicta dolorem eveniet incidunt nisi quaerat soluta ut? Architecto delectus fuga id iusto ratione.</h2>
-    <h2 >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium fuga hic magnam molestias quae sint, voluptatibus! Dicta dolorem eveniet incidunt nisi quaerat soluta ut? Architecto delectus fuga id iusto ratione.</h2>
-    <h2 >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium fuga hic magnam molestias quae sint, voluptatibus! Dicta dolorem eveniet incidunt nisi quaerat soluta ut? Architecto delectus fuga id iusto ratione.</h2>
-    <h2 >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium fuga hic magnam molestias quae sint, voluptatibus! Dicta dolorem eveniet incidunt nisi quaerat soluta ut? Architecto delectus fuga id iusto ratione.</h2>
-    <h2 >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium fuga hic magnam molestias quae sint, voluptatibus! Dicta dolorem eveniet incidunt nisi quaerat soluta ut? Architecto delectus fuga id iusto ratione.</h2>
-    <h2 >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium fuga hic magnam molestias quae sint, voluptatibus! Dicta dolorem eveniet incidunt nisi quaerat soluta ut? Architecto delectus fuga id iusto ratione.</h2>
-    <h2 >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium fuga hic magnam molestias quae sint, voluptatibus! Dicta dolorem eveniet incidunt nisi quaerat soluta ut? Architecto delectus fuga id iusto ratione.</h2>
+  <section class="container-fluid" style="margin-top: 20vh;">
+
+    <div class="row fade-500 justify-content-center text-center mb-5" >
+      <h1>Portfolio</h1>
+      <hr style="width:50%">
+    </div>
+
+    <div class="row justify-content-center mb-lg-0 fade-500">
+      <!-- 1 IMG -->
+      <div class="col-lg-3 my-2 mr-4 zoom">
+        <img class="img-fluid" src="../static/img/Veronika.jpg" alt="" style="border-radius: 8px;"/>
+      </div>
+      <!-- 2 IMG -->
+      <div class="col-lg-3 my-2 mx-4 zoom">
+        <img class="img-fluid" src="../static/img/Veronika.jpg" alt="" style="border-radius: 8px;"/>
+      </div>
+      <!-- 3 IMG -->
+      <div class="col-lg-3 my-2 ml-4 zoom">
+        <img class="img-fluid" src="../static/img/Veronika.jpg" alt="" style="border-radius: 8px;"/>
+      </div>
+
+    </div>
+
+    <div class="row justify-content-center mt-5 mb-lg-0 fade-500">
+      <!-- 4 IMG -->
+      <div class="col-lg-3 my-2 mr-4 zoom">
+        <img class="img-fluid" src="../static/img/Veronika.jpg" alt="" style="border-radius: 8px;"/>
+      </div>
+      <!-- 5 IMG -->
+      <div class="col-lg-3 my-2 mx-4 zoom">
+        <img class="img-fluid" src="../static/img/Veronika.jpg" alt="" style="border-radius: 8px;"/>
+      </div>
+      <!-- 6 IMG -->
+      <div class="col-lg-3 my-2 ml-4 zoom">
+        <img class="img-fluid" src="../static/img/Veronika.jpg" alt="" style="border-radius: 8px;"/>
+      </div>
+    </div>
+
+    <div class="row justify-content-center mt-5 mb-lg-0 fade-500">
+      <!-- 7 IMG -->
+      <div class="col-lg-3 my-2 mr-4 zoom">
+        <img class="img-fluid" src="../static/img/Veronika.jpg" alt="" style="border-radius: 8px;"/>
+      </div>
+      <!-- 8 IMG -->
+      <div class="col-lg-3 my-2 mx-4 zoom">
+        <img class="img-fluid" src="../static/img/Veronika.jpg" alt="" style="border-radius: 8px;"/>
+      </div>
+      <!-- ... Button -->
+      <div class="col-lg-3 my-2 ml-4 zoom">
+        <button type="button" class="btn-gallery">...</button>
+      </div>
+
+    </div>
+
+  </section>
+
+
+
 
     <!-- Footer -->
-    <footer>
-      <div class="сontainer bottom bg-dark p-5">
-        <div class="row justify-content-center">
-          <div class="col-lg-1 col-md-2 col-sm-4 h4 mx-4 my-2">
-            <a class="fb-ic">
-              <i class="fab fa-facebook-f fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-            </a>
-          </div>
-          <div class="col-lg-1 col-md-2 col-sm-4 h4 mx-4 my-2">
-            <a class="tw-ic">
-              <i class="fab fa-twitter fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-            </a>
-          </div>
-          <div class="col-lg-1 col-md-2 col-sm-4 h4 mx-4 my-2">
-            <a class="gplus-ic">
-              <i class="fab fa-google-plus-g fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-            </a>
-          </div>
-          <div class="col-lg-1 col-md-2 col-sm-4 h4 mx-4 my-2">
-            <a class="ins-ic">
-              <i class="fab fa-instagram fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-            </a>
-          </div>
-          <div class="col-lg-1 col-md-2 col-sm-4 h4 mx-4 mt-2">
-            <a class="li-ic">
-              <i class="fab fa-linkedin-in fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-            </a>
-          </div>
+  <footer>
+    <div class="сontainer bottom bg-dark p-5">
+      <div class="row justify-content-center">
+
+        <div class="col-lg-1 col-md-2 col-sm-4 h4 mx-4 my-2">
+          <a class="fb-ic">
+            <i class="fab fa-facebook-f fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+          </a>
         </div>
+
+        <div class="col-lg-1 col-md-2 col-sm-4 h4 mx-4 my-2">
+          <a class="tw-ic">
+            <i class="fab fa-twitter fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+          </a>
+        </div>
+
+        <div class="col-lg-1 col-md-2 col-sm-4 h4 mx-4 my-2">
+          <a class="gplus-ic">
+            <i class="fab fa-google-plus-g fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+          </a>
+        </div>
+
+        <div class="col-lg-1 col-md-2 col-sm-4 h4 mx-4 my-2">
+          <a class="ins-ic">
+            <i class="fab fa-instagram fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+          </a>
+        </div>
+
+        <div class="col-lg-1 col-md-2 col-sm-4 h4 mx-4 mt-2">
+          <a class="li-ic">
+            <i class="fab fa-linkedin-in fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+          </a>
+        </div>
+
       </div>
-    </footer>
+    </div>
+  </footer>
 </body>
 </html>
