--- a/templates/base.html
+++ b/templates/base.html
@@ -8,10 +8,85 @@
     </title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
     <link rel="stylesheet" href="../static/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../static/css/style.css">
 </head>
 <body>
-    {% block body %}
+  <header>
+    <nav class="navbar navbar-custom fixed-top navbar-expand-lg navbar-dark py-4 py-xl-1">
+      <div class="container-fluid">
+      <a class="navbar-brand" href="#">Veronique</a>
 
-    {%  endblock %}
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#NavbarLinksLeft,#NavbarLinksRight">
+        <span class="navbar-toggler-icon" style="width:70px;height:70px;"></span>
+      </button>
+
+      <div class="collapse navbar-collapse justify-content-end" id="NavbarLinksRight">
+
+        <ul class="navbar-nav mr-5">
+          <li class="nav-item h5 my-2 mx-2">
+            <a class="nav-link" href="#">Strona Główna</a>
+          </li>
+
+          <li class="nav-item h5 my-2 mx-2">
+            <a class="nav-link" href="#">O nas</a>
+          </li>
+
+          <li class="nav-item h5 my-2 mx-2" style="width: 150px;">
+            <a class="nav-link" href="#">Kontakt</a>
+          </li>
+        </ul>
+
+        <ul class="navbar-nav ml-5">
+          <li class="nav-item h4 mt-2 mx-1">
+            <a class="nav-link waves-effect waves-light" href="https://www.instagram.com/veronique_tattoo/">
+              <i class="fab fa-instagram"></i>
+            </a>
+          </li>
+
+          <li class="nav-item h4 mt-2 mx-1">
+            <a class="nav-link waves-effect waves-light" href="https://www.facebook.com/VeroniqueTattoo">
+              <i class="fab fa-facebook"></i>
+            </a>
+          </li>
+        </ul>
+
+      </div>
+      </div>
+    </nav>
+
+  </header>
+
+  {% block body %}
+
+  {%  endblock %}
+
+  <footer class="mt-5">
+    <div class="сontainer bottom" style="background:rgb(13,13,13)">
+      <div class="row align-items-center justify-content-center text-center">
+
+        <div class="col-md-3 col-sm-12 col-sm-4 mx-4 my-4">
+          <a class="mx-3 fa-bott" href="https://www.instagram.com/veronique_tattoo/">
+            <i class="fab fa-instagram fa-3x"></i>
+          </a>
+
+          <a class="mx-3 fa-bott" href="https://www.facebook.com/VeroniqueTattoo">
+            <i class="fab fa-facebook fa-3x"></i>
+          </a>
+        </div>
+
+        <div class="col-md-3 col-sm-12 col-sm-4 h4 mx-4">
+          <a class="fb fa-lg text-light" style="text-decoration: none;" href="#">Veronique</a>
+        </div>
+
+        <div class="col-md-3 col-sm-12 h4 mx-4 mt-4" style="color: #BDBDBD;">
+          <p>al. Kochanowskiego 22B</p>
+          <p>51-602 Wrocław</p>
+          <p>tel: 318 191 251</p>
+          <p>tel: 22 422 05 36</p>
+        </div>
+
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
